Release notes
=============

tig master
----------

Improvements:

 - Checkout files with unstaged changes. Bound to '!' by default.

tig-0.12
--------

Improvements:

 - F5 also refreshes the current view.
 - Allow line graphics to be disabled with new line-graphics option.
 - Main view: also include the reference names when searching.
 - Main view: support for refreshing.
 - Main view: disable boundary commits by default. Use --boundary when
   they should be shown. (Debian bug 498628)
 - Stage view: add stage-next action to jump to next diff chunk that can
   be staged. By default bound to '@'.
 - Configure: check for the ncurses header files.
 - Add author-width option to costumize the width of the author column.
   For example, put the following in ~/.tigrc: set author-width = 10

Bug fixes:

 - Fix regression when staging all diff chunks in a section.
 - Bind the maximize view action to 'O'; it conflicted with the
   keybinding to launch the merge tool in the status view.
 - Fix problem with $(cmd) usage in shell code. Some shells (jsh)
   installed as /bin/sh does not support it.
 - Do not show incomplete boundary commits when --no-walk is used.
 - Documentation: Rename gitlink macro to support AsciiDoc 8.2.3.
 - Ignore pipe reads with errno "Success" reported after a signals,
   for example when refreshing doing background loading.

tig-0.11
--------

Incompatibilities:

 - Remove parsing of deprecated options: -g, -l, -d.
 - The first seen '--' will stop option parsing and is passed to git
   instead of breaking out of tig's option parsing.

New features:

 - Blame view; bound to 'B' by default, reachable from the command line
   and the tree, status, and stage views.
 - Blame/main view: allow display of date, author, and references to be
   toggled on/off. Bound to 'D', 'A', and 'F' respectively.
 - Add action to maximize the current view.

Improvements:

 - Show the current branch in the status view.
 - Show local/light-weight tags.

Bug fixes:
