@@ -7,6 +7,8 @@ tig master
 Improvements:
 
  - Checkout files with unstaged changes. Bound to '!' by default.
+ - Main: use --topo-order also when rev-list arguments are given on the
+   command line.
 
 tig-0.12
 --------
